--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-streamlit>=1.45.1
-google-auth-oauthlib>=1.0.0
-google-auth>=2.0.0
-google-api-python-client>=2.0.0
-pandas>=2.2.3
-python-dateutil>=2.9.0
+streamlit==1.32.0
+google-auth-oauthlib==0.4.6
+google-auth==2.3.3
+google-api-python-client==2.47.0
+pandas==1.5.3
+python-dotenv==0.19.2
+plotly==5.18.0
+gunicorn==20.1.0
+Flask-Session==0.4.0 
