--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-streamlit==1.32.0
-google-auth-oauthlib==0.4.6
-google-auth==2.3.3
-google-api-python-client==2.47.0
-pandas==1.5.3
-python-dotenv==0.19.2
+streamlit==1.31.1
+google-auth-oauthlib==1.2.0
+google-auth==2.27.0
+google-api-python-client==2.108.0
+pandas==2.1.4
+python-dotenv==1.0.0
 plotly==5.18.0
+cachetools==5.3.2
+requests==2.31.0
 gunicorn==20.1.0
 Flask-Session==0.4.0 
